--- a/.env
+++ b/.env
@@ -7,3 +7,11 @@
 DATABASE_URL="mongodb+srv://sahry10:sahry10@cluster0.xl1qdku.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXT_SECRET="NEXT-SECRET"
+
+
+GITHUB_ID=d3cf636588354f36d3fa
+GITHUB_SECRET=3c2aa2ba9b11c4f08c4d8a02bbdac88961059251
+
+
+GOOGLE_CLIENT_ID=621029600295-t34q3jj701s779u0q410sddo7j52damd.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
