--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "4.10.1",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "20.4.1",
